Convert the b9 gray to #ccc
Co-authored-by: Jonathan Harford <jonathanh@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -139,8 +139,6 @@
 
     --aqua:        #49bbf0;
 
-    --gray:         #B9B9B9;
-
     --facebook-blue: #3b5998;
     --twitter-blue:  #00aced;
     --sms-green:     #1fcc23;
@@ -152,6 +150,7 @@
     --paypal:      #49bbf0;
     --pale-purple: #dedbe5;
     --white:       #ffffff;
+    --gray:        #cccccc;
     --cool-gray:   #eeefef;
     --black:       #000000;
 
