--- a/resources/css/custom-btn-primary.css
+++ b/resources/css/custom-btn-primary.css
@@ -19,7 +19,7 @@
 
 :root {
   --p-color:              #4427c1;
-  --gray:                 #B9B9B9;
+  --gray:                 #cccccc;
   --cool-gray:            #eeefef;
 
   --darken-1: rgba(0, 0, 0, .075);
