--- a/resources/css/custom-btn.css
+++ b/resources/css/custom-btn.css
@@ -117,6 +117,6 @@
   --s-color:   #6bc8ad;
   --cool-gray: #eeefef;
   --paypal:    #49bbf0;
-  --gray:      #B9B9B9;
+  --gray:      #cccccc;
   --white:     #ffffff;
 }
