--- a/resources/css/custom-border-colors.css
+++ b/resources/css/custom-border-colors.css
@@ -9,7 +9,7 @@
 
 :root {
   --white:         #ffffff;
-  --gray:          #B9B9B9;
+  --gray:          #cccccc;
   --black:         #000000;
 
   --p-color:   #4427c1;
