Update freeinstall banner on product detail page to new styles
[#170223817]

Co-authored-by: Heather Farley <heather@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -152,6 +152,7 @@
     --white:       #ffffff;
     --gray:        #cccccc;
     --cool-gray:   #eeefef;
+    --warm-gray:   #ece6e2;
     --black:       #000000;
 
     --s-color-transparent:  rgba(107, 200, 173, 0.20);
