--- a/resources/css/custom-carousel.css
+++ b/resources/css/custom-carousel.css
@@ -15,12 +15,11 @@
     padding: 0;
     margin: 0 5px;
     border-radius: 50%;
-    background: #ddd;
+    background: var(--cool-gray);
     border: 0;
-    opacity: 0.623529;
 }
 .tns-nav>.tns-nav-active {
-    background: #999;
+    background: var(--s-color);
 }
 
 /* Carousel Arrows */
@@ -140,6 +139,8 @@
 }
 
 :root {
-    --white:        #FFFFFF;
-    --gray:         #cccccc;
+    --white:       #FFFFFF;
+    --s-color:     #6bc8ad;
+    --gray:        #cccccc;
+    --cool-gray:   #eeefef;
 }
