Add underline buttons to design system; update usages
To standardize on links-that-are-more-button-like styles.

Bumps button-font-N where N >= 2:

- button-font-2 -> button-font-3
- button-font-3 -> button-font-4

The new button-font-2 size (14px) is a size between button-font-1 (15px) and
button-font-3 (12px).

--- a/resources/css/custom-typography.css
+++ b/resources/css/custom-typography.css
@@ -72,10 +72,14 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: 0.92px;
 }
 .button-font-2 {
+    font: 900 14px/17px var(--font-family-proxima);
+    letter-spacing: 0.86px;
+}
+.button-font-3 {
     font: 900 12px/15px var(--font-family-proxima);
     letter-spacing: 0.74px;
 }
-.button-font-3 {
+.button-font-4 {
     font: 900 11px/13px var(--font-family-proxima);
     letter-spacing: 0.68px;
 }
