Rebrand cart page
- product line
- autocomplete suggestions
- summary lines
- promo code box
- total

[#170084677]

--- a/resources/css/custom-border-colors.css
+++ b/resources/css/custom-border-colors.css
@@ -2,8 +2,9 @@
 .border-gray          { border-color: var(--gray); }
 .border-black         { border-color: var(--black); }
 
-.border-p-color   { border-color: var(--p-color); }
-.border-cool-gray { border-color: var(--cool-gray); }
+.border-p-color     { border-color: var(--p-color); }
+.border-cool-gray   { border-color: var(--cool-gray); }
+.border-pale-purple { border-color: var(--pale-purple); }
 
 .debug * { outline: 1px solid gold; }
 
@@ -14,4 +15,5 @@
 
   --p-color:   #4427c1;
   --cool-gray: #eeefef;
+  --pale-purple: #dedbe5;
 }
