--- a/resources/css/custom-uploadcare.css
+++ b/resources/css/custom-uploadcare.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url(/fonts/Proxima-Nova-Black.woff) format('woff');
+    font-weight: 900;
+    unicode-range: U+0020-007F; /* The bare minimum for the English Language */
+    font-display: swap;
+}
+
 .uploadcare-dialog-tab,
 .uploadcare-dialog-tabs,
 .uploadcare-dialog-panel {
@@ -24,24 +32,57 @@
     justify-content: center;
 }
 .uploadcare-dialog-tab {
-    width: 50px;
+    width: 72px;
+    height: 72px;
     margin: 0 10px 10px 0;
     float: left;
+    background-color: var(--warm-gray);
+    border-style: solid;
+    border-width: var(--border-width);
+    border-color: var(--white);
 }
 .uploadcare-dialog-tab:hover {
-    background-color: var(--white);
+    background-color: var(--warm-gray);
+}
+.uploadcare-dialog-tab-facebook:before, .uploadcare-dialog-tab-facebook:hover:before {
+    background-image: url('/images/icons/facebook-f.svg');
+    background-size: 13px 27px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    opacity: 1;
+}
+
+.uploadcare-dialog-tab-instagram:before, .uploadcare-dialog-tab-instagram:hover:before {
+    background-image: url('/images/icons/instagram.svg');
+    background-size: 25px 25px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    opacity: 1;
+}
+
+.uploadcare-dialog-tab .uploadcare-dialog-icon, .uploadcare-dialog-tab:hover:before, .uploadcare-dialog-tab:before {
+    opacity: 1;
 }
 .uploadcare-dialog-tab-file:before,
 .uploadcare-dialog-tab-file:hover:before {
-    background-image: url('/images/icons/filmstrip-icon.svg');
+    background-image: url('/images/icons/up-arrow.svg');
     background-size: 30px 30px;
     background-position: 50%;
     background-repeat: no-repeat;
-    opacity: 0.33;
+    border-radius: 50%;
+    border-color: black;
+    border-width: var(--border-width);
+    opacity: 1;
 }
 .uploadcare-dialog-tab-file:hover:before {
-    opacity: 0.66;
+    opacity: 1;
 }
+.uploadcare-dialog-tab_current {
+    border-style: solid;
+    border-width: var(--selected-border-width);
+    border-color: var(--p-color);
+}
+
 .uploadcare-dialog-tab-file.uploadcare-dialog-tab_current:before {
     opacity: 1;
 }
@@ -55,33 +96,45 @@
     display: none;
 }
 
-.uploadcare-dialog-big-button, .uploadcare-dialog-big-button:hover, .uploadcare-dialog-big-button:focus, .uploadcare-dialog-big-button:active, .big-button, .big-button:hover, .big-button:focus, .big-button:active {
-    background: #4427c1;
+.uploadcare-dialog-big-button,
+.uploadcare-dialog-big-button:hover,
+.uploadcare-dialog-big-button:focus,
+.uploadcare-dialog-big-button:active,
+.big-button,
+.big-button:hover,
+.big-button:focus,
+.big-button:active {
     box-shadow: none;
     border: none;
     text-shadow: none;
     font-family: var(--button-font-family);
     font-size: var(--button-font-size);
-    font-weight: var(--button-font-weight);
+    font-weight: 900;
     letter-spacing: var(--button-letter-spacing);
     text-decoration: none;
+    text-transform: uppercase;
     text-align: center;
     cursor: pointer;
     line-height: var(--button-line-height);
-    padding: var(--button-padding-y) var(--button-padding-x);
-    border: var(--border-width) solid transparent;
-    border-radius: var(--button-border-radius);
     vertical-align: middle;
     -webkit-appearance: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0.5);
     user-select: none;
-}
+    border-radius: 0px;
+    border-image-source: svg-load(var(--oct-button-medium-svg), fill=var(--p-color), stroke=none);
+	  border-image-slice: 15 fill;
+    border-image-width: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 80%;
 
-.source-instagram .big-button, .source-instagram .big-button:hover, .source-instagram .big-button:focus, .source-instagram .big-button:active {
-    background: #5185a8;
-}
-.source-facebook .big-button, .source-facebook .big-button:hover, .source-facebook .big-button:focus, .source-facebook .big-button:active {
-    background: var(--facebook-blue);
+    padding-left: 30px;
+    padding-right: 30px;
+
+    border-image-repeat: stretch;
+
+    background: none;
+    background-image: none;
 }
 
 .uploadcare-dialog-title {
@@ -95,6 +148,7 @@
 .uploadcare-draganddrop .uploadcare-dialog-file-drop-area {
     /* Dotted border around drag-and-drop area. Though it's supported, we don't want to encourage drag-and-drop. Besides, the dotted border is ugly. */
     border: none;
+    background-color: var(--warm-gray);
 }
 
 .uploadcare-draganddrop .uploadcare-if-draganddrop {
@@ -126,22 +180,28 @@
 }
 
 :root {
-    --border-width: 1px;
     --button-border-radius: var(--border-radius);
     --border-radius: 2px;
 
     --primary: #4427c1;
+
     --white: #ffffff;
+    --p-color: #4427c1;
+    --warm-gray:   #ece6e2;
     --facebook-blue: #3b5998;
 
-    --bold-font-weight: bold;
-    --button-font-family: inherit;
+    --border-width: 1px;
+    --selected-border-width: 2px;
+
+    --button-font-family: 'Proxima Nova', Arial, sans-serif;
     --button-font-size: inherit;
-    --button-font-weight: var(--bold-font-weight);
+    --button-font-weight: 900;
     --button-line-height: 1.125rem;
     --button-letter-spacing: 0;
     --button-padding-y: 1rem;
     --button-padding-x: 1rem;
     --darken-1: rgba(0, 0, 0, .075);
     --darken-3: rgba(0, 0, 0, .375);
+
+    --oct-button-medium-svg: '../public/images/oct_button_medium.svg';
 }
