--- a/resources/css/custom-typography.css
+++ b/resources/css/custom-typography.css
@@ -7,14 +7,14 @@
 }
 @font-face {
     font-family: 'Proxima Nova';
-    src: url(/fonts/Proxima-Nova.woff) format('woff');
+    src: url(/fonts/Proxima-Nova.woff2) format('woff2');
     font-weight: 400;
     unicode-range: U+0020-007F; /* The bare minimum for the English Language */
     font-display: swap;
 }
 @font-face {
     font-family: 'Proxima Nova';
-    src: url(/fonts/Proxima-Nova-Black.woff) format('woff');
+    src: url(/fonts/Proxima-Nova-Black.woff2) format('woff2');
     font-weight: 900;
     unicode-range: U+0020-007F; /* The bare minimum for the English Language */
     font-display: swap;
