Use postcss's "stretch" instead of "min-height:100vh" for iOS Safari
[#170740029]

Co-authored-by: Jonathan Harford <jonathanh@mayvenn.com>

--- a/resources/css/custom-layout.css
+++ b/resources/css/custom-layout.css
@@ -6,6 +6,10 @@
   overflow: hidden;
 }
 
+.stretch {
+    min-height: stretch;
+}
+
 @media (--on-tablet) {
   .max-960, .container { max-width: 720px; }
 }
