100vh (for Firefox) & -webkit-fill-available instead of stretch
[#170740029]

Co-authored-by: Jonathan Harford <jonathanh@mayvenn.com>

--- a/resources/css/custom-layout.css
+++ b/resources/css/custom-layout.css
@@ -7,7 +7,8 @@
 }
 
 .stretch {
-    min-height: stretch;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
 }
 
 @media (--on-tablet) {
