--- a/resources/css/custom-btn.css
+++ b/resources/css/custom-btn.css
@@ -82,8 +82,9 @@
 .btn-paypal-color           { color: var(--white); }
 .btn-paypal-color.btn-large { border-image-source: svg-load(var(--oct-button-large-svg), fill=var(--paypal), stroke=none); }
 
-.btn-facebook-blue           { color: var(--white); }
+.btn-facebook-blue           { color: var(--white); 
 .btn-facebook-blue.btn-large { border-image-source: svg-load(var(--oct-button-large-svg), fill=var(--facebook-blue), stroke=none); }
+.btn-facebook-blue.btn-medium { border-image-source: svg-load(var(--oct-button-medium-svg), fill=var(--facebook-blue), stroke=none); }
 
 .btn-s-color { color: var(--white); background-color: var(--s-color); }
 
