--- a/resources/css/custom-svg-colors.css
+++ b/resources/css/custom-svg-colors.css
@@ -33,6 +33,7 @@
   --pale-purple: #dedbe5;
   --white:       #ffffff;
   --gray:        #cccccc;
+  --refresh-gray #f5f5f5;
   --dark-gray:   #979797;
   --cool-gray:   #eeefef;
   --black:       #000000;
