--- a/resources/css/custom-colors.css
+++ b/resources/css/custom-colors.css
@@ -4,19 +4,20 @@
 
 .placeholder-black::placeholder { color: var(--black); }
 
-.p-color     { color: var(--p-color); }
-.s-color     { color: var(--s-color); }
-.red         { color: var(--red); }
-.pink        { color: var(--pink); }
-.light-red   { color: var(--light-red); }
-.paypal      { color: var(--paypal); }
-.pale-purple { color: var(--pale-purple); }
-.white       { color: var(--white); }
-.cool-gray   { color: var(--cool-gray); }
-.warm-gray   { color: var(--warm-gray); }
-.black       { color: var(--black); }
-.gray        { color: var(--gray); }
-.dark-gray   { color: var(--dark-gray); }
+.p-color      { color: var(--p-color); }
+.s-color      { color: var(--s-color); }
+.red          { color: var(--red); }
+.pink         { color: var(--pink); }
+.light-red    { color: var(--light-red); }
+.paypal       { color: var(--paypal); }
+.pale-purple  { color: var(--pale-purple); }
+.white        { color: var(--white); }
+.refresh-gray { color: var(--refresh-gray)}
+.cool-gray    { color: var(--cool-gray); }
+.warm-gray    { color: var(--warm-gray); }
+.black        { color: var(--black); }
+.gray         { color: var(--gray); }
+.dark-gray    { color: var(--dark-gray); }
 
 :focus { outline: var(--p-color) auto 5px }
 
@@ -24,17 +25,18 @@
   --yellow:         #ffc520;
 
   /* THESE ARE OUR NEW COLORS */
-  --gray:        #cccccc;
-  --dark-gray:   #979797;
-  --p-color:     #4427c1;
-  --s-color:     #6bc8ad;
-  --red:         #f94941;
-  --pink:        #f4c3d6;
-  --light-red:   #fef7fa;
-  --paypal:      #49bbf0;
-  --pale-purple: #dedbe5;
-  --white:       #ffffff;
-  --cool-gray:   #eeefef;
-  --warm-gray:   #ece6e2;
-  --black:       #000000;
+  --gray:         #cccccc;
+  --dark-gray:    #979797;
+  --p-color:      #4427c1;
+  --s-color:      #6bc8ad;
+  --red:          #f94941;
+  --pink:         #f4c3d6;
+  --light-red:    #fef7fa;
+  --paypal:       #49bbf0;
+  --pale-purple:  #dedbe5;
+  --white:        #ffffff;
+  --refresh-gray: #f5f5f5;
+  --cool-gray:    #eeefef;
+  --warm-gray:    #ece6e2;
+  --black:        #000000;
 }
