--- a/resources/css/custom-svg-colors.css
+++ b/resources/css/custom-svg-colors.css
@@ -26,15 +26,15 @@
 
 
   /* THESE ARE OUR NEW COLORS */
-  --p-color:     #4427c1;
-  --s-color:     #6bc8ad;
-  --red:         #f94941;
-  --paypal:      #49bbf0;
-  --pale-purple: #dedbe5;
-  --white:       #ffffff;
-  --gray:        #cccccc;
-  --refresh-gray #f5f5f5;
-  --dark-gray:   #979797;
-  --cool-gray:   #eeefef;
-  --black:       #000000;
+  --p-color:      #4427c1;
+  --s-color:      #6bc8ad;
+  --red:          #f94941;
+  --paypal:       #49bbf0;
+  --pale-purple:  #dedbe5;
+  --white:        #ffffff;
+  --gray:         #cccccc;
+  --refresh-gray: #f5f5f5;
+  --dark-gray:    #979797;
+  --cool-gray:    #eeefef;
+  --black:        #000000;
 }
