Multi-service voucher redeemed page
[#171245885]

Co-authored-by: Heather Farley <heather@mayvenn.com>
Co-authored-by: Stella Clemens <stella@mayvenn.com>

--- a/resources/css/custom-background-colors.css
+++ b/resources/css/custom-background-colors.css
@@ -20,6 +20,9 @@
 .bg-pale-purple  { background-color: var(--pale-purple); }
 .bg-pink         { background-color: var(--pink); }
 
+.bg-alternate-refresh-gray-white:nth-child(odd) { background-color: var(--refresh-gray); }
+.bg-alternate-refresh-gray-white:nth-child(even) { background-color: var(--white); }
+
 :root {
     --facebook-blue:          #3b5998;
     --quadpay-blue:           #1d73ec;
