--- a/resources/css/custom-btn.css
+++ b/resources/css/custom-btn.css
@@ -66,6 +66,15 @@
     align-items: center;
     justify-content: center;
     border: var(--border-width) solid var(--gray);
+    border-radius: 15px;
+}
+
+.btn-square {
+    padding: 0px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: var(--border-width) solid var(--gray);
     border-left-style: none;
 }
 
@@ -93,7 +102,7 @@
 .btn-gray.btn-large  { border-image-source: svg-load(var(--oct-button-large-svg), fill=var(--cool-gray), stroke=none); }
 .btn-gray.btn-medium { border-image-source: svg-load(var(--oct-button-medium-svg), fill=var(--cool-gray), stroke=none); }
 .btn-gray.btn-small  { background-color: var(--cool-gray); border-style: none; }
-.btn-gray.btn-pill   { background-color: var(--cool-gray); }
+.btn-gray.btn-square { background-color: var(--cool-gray); }
 
 ::-moz-focus-inner {
   border: 0;
