Offset margin on right side of menu item indent
[#171638068]

Co-authored-by: Heather Farley <heather@mayvenn.com>

--- a/resources/css/custom-interaction.css
+++ b/resources/css/custom-interaction.css
@@ -23,6 +23,7 @@
 .hover-menu-item:hover > span {
     margin-left: 10px;
     color: var(--p-color);
+    margin-right: -10px;
 }
 
 @keyframes lineItemGlow {
