Update dark-gray to match hex from invision board '#B8B8B8'
Co-authored-by: Heather Farley <heather@mayvenn.com>

--- a/resources/css/custom-background-colors.css
+++ b/resources/css/custom-background-colors.css
@@ -43,7 +43,7 @@
     --white:        #ffffff;
     --gray-mask:    rgba(204, 204, 204, 0.1);
     --gray:         #cccccc;
-    --dark-gray:    #979797;
+    --dark-gray:    #8B8B8B;
     --refresh-gray: #f5f5f5;
     --cool-gray:    #eeefef;
     --warm-gray:    #ece6e2;
