--- a/resources/css/custom-colors.css
+++ b/resources/css/custom-colors.css
@@ -26,7 +26,7 @@
 
   /* THESE ARE OUR NEW COLORS */
   --gray:         #cccccc;
-  --dark-gray:    #979797;
+  --dark-gray:    #8B8B8B;
   --p-color:      #4427c1;
   --s-color:      #6bc8ad;
   --red:          #f94941;
