--- a/resources/css/custom-svg-colors.css
+++ b/resources/css/custom-svg-colors.css
@@ -34,7 +34,7 @@
   --white:        #ffffff;
   --gray:         #cccccc;
   --refresh-gray: #f5f5f5;
-  --dark-gray:    #979797;
+  --dark-gray:    #8B8B8B;
   --cool-gray:    #eeefef;
   --black:        #000000;
 }
