--- a/resources/css/custom-typography.css
+++ b/resources/css/custom-typography.css
@@ -123,6 +123,8 @@ h1, h2, h3, h4, h5, h6 {
     .left-align-on-dt  { text-align: left; }
 }
 
+/* @custom-media --on-desktop            (min-width: 1000px); */
+
 :root {
     --serif: serif;
     --sans-serif: sans-serif;
