--- a/resources/css/custom-border-colors.css
+++ b/resources/css/custom-border-colors.css
@@ -2,19 +2,21 @@
 .border-gray          { border-color: var(--gray); }
 .border-black         { border-color: var(--black); }
 
-.border-p-color     { border-color: var(--p-color); }
-.border-s-color     { border-color: var(--s-color); }
-.border-cool-gray   { border-color: var(--cool-gray); }
-.border-pale-purple { border-color: var(--pale-purple); }
+.border-p-color        { border-color: var(--p-color); }
+.border-s-color        { border-color: var(--s-color); }
+.border-cool-gray      { border-color: var(--cool-gray); }
+.border-pale-purple    { border-color: var(--pale-purple); }
+.border-warning-yellow { border-color: var(--warning-yellow); }
 
 .debug * { outline: 1px solid gold; }
 
 :root {
-  --white:       #ffffff;
-  --gray:        #cccccc;
-  --black:       #000000;
-  --p-color:     #4427c1;
-  --s-color:     #6bc8ad;
-  --cool-gray:   #eeefef;
-  --pale-purple: #dedbe5;
+  --white:          #FFFFFF;
+  --gray:           #CCCCCC;
+  --black:          #000000;
+  --p-color:        #4427C1;
+  --s-color:        #6BC8AD;
+  --cool-gray:      #EEEFEF;
+  --pale-purple:    #DEDBE5;
+  --warning-yellow: #EDC203;
 }
