When a user with a locked service line item clicks on the promo helper bar, the promo helper should expand and the UI should look like the attached
[#172743892]

There should be a new promotion helper bar when a user adds a free mayvenn service to their bag

[#172779709]

Co-authored-by: Corey Reece <corey@mayvenn.com>
Co-authored-by: Jonathan Harford <jonathanh@mayvenn.com>

--- a/resources/css/custom-svg-colors.css
+++ b/resources/css/custom-svg-colors.css
@@ -19,11 +19,11 @@
 .fill-white     { fill: var(--white); }
 .fill-dark-gray { fill: var(--gray); }
 .fill-black     { fill: var(--black); }
+.fill-teal      { fill: var(--teal); }
 
 :root { /* Compare to app.css :( */
   --twitter-blue:   #00aced;
   --aqua:         #49BBF0;
-
 
   /* THESE ARE OUR NEW COLORS */
   --p-color:      #4427c1;
@@ -37,4 +37,5 @@
   --dark-gray:    #8B8B8B;
   --cool-gray:    #eeefef;
   --black:        #000000;
+  --teal:         #6BC8AD;
 }
